--- a/certificates.html
+++ b/certificates.html
@@ -17,6 +17,10 @@
         </a>
         <!-- Links webpages together seen in the 'Navbar' -->
         <b><a style="float: right; width: 400px;"> </a></b>
+        <!-- Button for toggling dark mode -->
+        <button id="darkModeToggle" style="float: right; width: 100px; font-size: 11px; text-align: center; border: none; background: none; padding: 0; margin-top: 18px;">
+            <img src="imgs/darkmode.png" width="20" height="20" style="border: none;">
+        </button>
         <b><a href="github.com" style="float: right; font-size: 12px; text-align:center">GitHub</a></b>
         <b><a href="https://www.linkedin.com/in/eoin-keogh-bb6a3a242/" style="float: right; font-size: 12px; text-align:center"> LinkedIn </a></b>
     </div>
