--- a/certificates.html
+++ b/certificates.html
@@ -19,7 +19,7 @@
         <b><a style="float: right; width: 400px;"> </a></b>
         <!-- Button for toggling dark mode -->
         <button id="darkModeToggle" style="float: right; width: 100px; font-size: 11px; text-align: center; border: none; background: none; padding: 0; margin-top: 18px;">
-            <img src="imgs/darkmode.png" width="20" height="20" style="border: none;">
+            <img src="imgs/moon_icon.png" width="20" height="20" style="border: none;">
         </button>
         <b><a href="https://github.com/eoinkeoghh?tab=repositories" style="float: right; font-size: 12px; text-align:center">GitHub</a></b>
         <b><a href="https://www.linkedin.com/in/eoin-keogh-bb6a3a242/" style="float: right; font-size: 12px; text-align:center"> LinkedIn </a></b>
