--- a/certificates.html
+++ b/certificates.html
@@ -31,6 +31,8 @@
             <img src="imgs/CCNAIntroductiontoNetworks.png" alt="Certificate 1" width="300" height="300">
             <img src="imgs/CCNASwitchingRoutingandWirelessEssentials.png" alt="Certificate 2" width="300" height="300">
             <img src="imgs/CyberSecurity.png" alt="Certificate 3" width="300" height="300">
+            <img src="imgs/PythonEssentials.png" alt="Certificate 4" width="300" height="300">
+
         </div>
 
         <!-- Additional text related to certificates -->
