--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
       </div>
     </section>
-    <div class="profile">
+    <div class="Certificate">
       <h1 class="section__text">Certificates</h1>
       <div class="image__text">
         <a href="https://www.credly.com/badges/fdf749b6-5827-499a-bdeb-b73640f0a561/linked_in_profile">
@@ -69,20 +69,6 @@
       </div>
     </div>
   
-    </section>
-    <section id="contact">
-      <p class="section__text__p1">Get in Touch</p>
-
-      <div class="contact-info-upper-container">
-        <div class="contact-info-container">
-          <img
-            src="./assets/linkedin.png"
-            alt="LinkedIn icon"
-            class="icon contact-icon"
-          />
-          <p><a href="www.linkedin.com/in/eoin-keogh-bb6a3a242">LinkedIn</a></p>
-        </div>
-      </div>
     </section>
  <!--
   <footer>
