--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://www.linkedin.com/in/eoin-keogh-bb6a3a242/'"
+            href='https://www.linkedin.com/in/eoin-keogh-bb6a3a242/'
           />
           <img
             src="./assets/github.png"
