--- a/index.html
+++ b/index.html
@@ -33,12 +33,9 @@
         <div class="btn-container">
         </div>
         <div id="socials-container">
-          <img
-            src="./assets/linkedin.png"
-            alt="My LinkedIn profile"
-            class="icon"
-            href='https://www.linkedin.com/in/eoin-keogh-bb6a3a242/'
-          />
+          <a href="https://www.linkedin.com/in/eoin-keogh-bb6a3a242/">
+            <img src="assets/linkedin.png" alt="Certificate 2" width="32" height="auto">
+          </a>
           <img
             src="./assets/github.png"
             alt="My Github profile"
